owncloud-news (1.804)
* Make it possible to rename folders

owncloud-news (1.803)
* Use the feed link if an item doesn't specificy a link
* Don't fail if article url does not exist but fall back to feed url
* Article enhancers for
  - nerfnow.com
  - sandraandwo.com
  - geek-and-poke.com
  - nichtlustig.de
  - thegamercat.com
  - twokinds.keenspot.com

owncloud-news (1.802)
* Increase performance by not making auto page requests anymore if the last result didn't contain any articles

owncloud-news (1.801)
* Add ability to rename feeds
* Compact view
* Add shortcut to expand items in compact view

owncloud-news (1.605)
* Adding feeds does not block the input box any more
* Always display empty folders
* Better description for hiding/showing read articles
* Make it easier to add simple article enhancers by moving the data into a JSON configuration file
* Add regex based item enhancers
* Article enhancers for
  - buttersafe.com
  - twogag.com
  - cad-comic.com
  - penny-arcade.com
  - leasticoulddo.com
  - escapistmagazine.com
  - trenchescomic.com
  - lfgcomic.com
  - sandraandwoo.com
  - theoatmeal.com
  - loldwell.com
  - mokepon.smackjeeves.com

owncloud-news (1.604)
* Use 64bit integers to prevent running out of ids after a year for large installations
* Fix postgres feed queries with correct group by
* Article enhancers now transform relative links on a page to absolute links

owncloud-news (1.603)
* Fix JavaScript errors which prevented the translation elements from being removed

owncloud-news (1.602)
* Remove removed class from container
* Go back to allow feeds per url from input
* Added ThemeRepublic.net Enhancer
* Remove unsigned from articles_per_update column to not fail with a weird error
* Manually convert &apos; to ' in title and author fields of articles because its not build into PHP
* Fix localisation of app name in tab title

owncloud-news (1.601)
* Remove Google Reader import